--- a/pagina.html
+++ b/pagina.html
@@ -38,8 +38,8 @@
                 </p>
 
                 <div class="botones">
-                    <a href="#" class="btn-1">Comprar <img class="icon" src="images/car.svg" alt="icon"></a>
-                    <a href="#" class="btn-2">Informacion <img class="icon" src="images/arrow.svg" alt="icon"></a>
+                    <a href="#" class="btn-1">Comprar <img class="icon" src="imagenes/car.svg" alt="icon"></a>
+                    <a href="#" class="btn-2">Informacion <img class="icon" src="imagenes/arrow.svg" alt="icon"></a>
                 </div>
             </div>
             <div class="header-img">
@@ -78,7 +78,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -343,7 +343,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -398,7 +398,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -413,7 +413,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -428,7 +428,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -458,7 +458,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -473,7 +473,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -488,7 +488,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -503,7 +503,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -518,7 +518,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -533,7 +533,7 @@
                                 enim omnis totam neque soluta.</p>
                             <div class="icons">
                                 <span class="price">$15.00</span>
-                                <span class="buy"><img src="images/car.svg" alt=""></span>
+                                <span class="buy"><img src="imagenes/car.svg" alt=""></span>
                             </div>
                         </div>
                     </div>
@@ -629,17 +629,17 @@
             <div class="socials">
                 <a href="https://www.facebook.com/jhoansebastian.jhoancolorado/">
                     <div class="social">
-                        <img src="images/s1.svg" alt="">
+                        <img src="imagenes/s1.svg" alt="">
                     </div>
                 </a>
                 <a href="https://twitter.com/sebasti06182047">
                     <div class="social">
-                        <img src="images/s2.svg" alt="">
+                        <img src="imagenes/s2.svg" alt="">
                     </div>
                 </a>
                 <a href="https://www.instagram.com/jhoanmorac/">
                     <div class="social">
-                        <img src="images/s3.svg" alt="">
+                        <img src="imagenes/s3.svg" alt="">
                     </div>
                 </a>
             </div>
